# multitenant-saas

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/api/v1/: health.py
app/core/: config.py  logging.py
